2006-09-19  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-time-editor.c:
	(hildon_time_editor_entry_clicked): This function has been
	removed. It is not needed any more.
	(_hildon_time_editor_entry_select_all): Added in order to perform
	the whole text selection into the entry with an idle call.
	(hildon_time_editor_entry_focusin): Modified to just add the
	function above to the idle queue.
	Fixes #NB40665.

	* hildon-widgets/hildon-caption.c (hildon_caption_button_press):
	Added condition to return when the widget has already the focus.
	Fixes #NB31086.	

2006-09-19  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-color-button.c: Draw insensitive grid over the
	color button widget if the widget is insensitive. Fixes #NB40329. 

2006-09-18  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* debian/control:
	* debian/rules: Fixing the debug symbols package. Fixes #NB40532.

2006-09-15  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[0.14.3-1 release]

	* configure.ac:
	* debian/changelog: Bumping version numbers, adding info about the
	fixes.

2006-09-15  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-window.c: When a new menu is being attached to
	the window, call show on the menu itself, not the whole window. Fixes
	#NB40566.

2006-09-14  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-date-editor.c:
	(hildon_date_editor_entry_released): Removed this function in order
	to avoid the selection of the entry with the second click.
	(hildon_date_editor_entry_focusin): Removed the test, now we want
	to select the entry using the callback in all the situations. 
	Fixes #NB39612. 
	
	* hildon-widgets/hildon-number-editor.c: renamed {plus,minus}-button
	widgets to ne-{plus,minus}-button in order to do the theming without
	depending on the HildonNumberEditor widget name. Fixes #MB624. Will